<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view_ingredients"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layoutManager="LinearLayoutManager"/>
  <com.google.android.exoplayer2.ui.SimpleExoPlayerView
    android:id="@+id/exo_player"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_marginTop="0dp"
    android:background="@android:color/black"
    />
  <TextView
    android:id="@+id/text_view_no_video"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:layout_marginTop="0dp"
    android:background="@android:color/black"
    android:gravity="center"
    android:text="@string/text_view_no_video_available"
    android:textColor="@android:color/white"
    android:textSize="@dimen/text_size_normal_default"
    android:visibility="gone"
    />

  <android.support.constraint.ConstraintLayout
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="1">
    <TextView
      android:id="@+id/text_view_recipe_step_short_desc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_single_default"
      android:padding="@dimen/padding_single_default"
      android:textAppearance="@style/TextAppearance.AppCompat.Headline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:context="com.example.ab.bakingapp.RecipeDetailFragment"/>
    <TextView
      android:id="@+id/text_view_recipe_step_long_desc"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/margin_single_default"
      android:padding="@dimen/padding_single_default"
      android:textSize="@dimen/text_size_normal_default"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/text_view_recipe_step_short_desc"
      tools:context="com.example.ab.bakingapp.RecipeDetailFragment"/>
    <Button
      android:id="@+id/button_recipe_step_next"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:text="next"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toEndOf="@+id/button_recipe_step_prev"/>
    <Button
      android:id="@+id/button_recipe_step_prev"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:text="previous"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toStartOf="@+id/button_recipe_step_next"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"/>

  </android.support.constraint.ConstraintLayout>
</LinearLayout>

