<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical">
  <TextView
    android:id="@+id/text_view_ingredient"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/default_padding"
    android:foreground="?android:attr/selectableItemBackground"
    android:text="@string/ingredients"
    android:textAppearance="?attr/textAppearanceListItem"
    />
  <android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_view_recipe_step_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:name="com.example.ab.bakingtime.RecipeStepListFragment"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.example.ab.bakingtime.RecipeStepListActivity"
    tools:listitem="@layout/recipe_step_list_content"/>
</LinearLayout>

