<resources>
  <string name="app_name">Baking Time</string>
  <string name="title_recipe_step_list">Recipe Steps</string>
  <string name="title_recipe_step_detail">Recipe Step Detail</string>
  <string name="ingredients">Ingredients</string>
  <string name="app_widget_text">No Recipe Selected</string>
  <string name="select_recipe">Select Recipe</string>
  <string name="text_view_no_video_available">No Video Available</string>
  <string name="label_recipe_serving">Servings: </string>
</resources>
